2003-01-19  Derek Atkins  <derek@ihtfp.com>

	* src/engine/gnc-numeric.c -- be more intelligent when operating
	  on numbers of different denominators.  In particular, convert
	  both numbers to the lcd and then operate on them, instead of
	  assuming that a "cross-multiply" is safe.
	* src/app-utils/test/test-print-parse-amount.c -- add more tests for
	  PrintAmountInternal by checking force_fit and round.  Excercises
	  a bug (fixed in this patch) where cross-multiplies were NOT safe.

	* src/gnome-search/dialog-search.c -- reset the search-type to
	  "New Search" if we end up displaying no results.  Fixes bug #97095.

	* src/app-utils/prefs.scm -- combine all the Advanced prefs into one
	  location.  Then add the "New Search Limit" preference.
	* src/gnome-search/dialog-search.c --Use the "New Search Limit" pref
	  to decide when to start a new search vs. when refine the search.
	  Really fix #97095.
	
2003-01-18  Derek Atkins  <derek@ihtfp.com>

	* src/business/business-core/gncTaxTable.[ch]: add functions to
	  get the GUID and lookup by direct GUID (suitable for wrapping)
	* src/business/business-core/gw-business-core-spec.scm: wrap
	  the taxtable get-guid and lookup methods
	* src/business/business-gnome/business-utils.[ch]: re-implement
	  the "generic option menu" code to allow get_value(), set_value(),
	  and changed_callback() functions.
	* src/business/business-gnome/business-options.c: create a taxtable
	  option type using the new generic optionmenu code
	* src/business/business-gnome/business-options.scm: define a taxtable
	  option.  Also fix all the other options when using a KVP storage
	  to actually load and save the options properly
	* src/business/business-gnome/business-prefs.scm: create a default
	  customer and default vendor taxtable option for the "File Properties"
	  option menu.

	  Initial fix for #93462.  Next commit will actually use the values.

	move code around a lot.
	* Rename a bunch of files: