@@ -3,21 +3,30 @@
 
 DIE=0
 
+AUTOCONF=${AUTOCONF:-autoconf}
+AUTOHEADER=${AUTOHEADER:-autoheader}
+AUTOMAKE=${AUTOMAKE:-automake}
+ACLOCAL=${ACLOCAL:-aclocal}
+GETTEXTIZE=${GETTEXTIZE:-gettextize}
+INTLTOOLIZE=${INTLTOOLIZE:-intltoolize}
+LIBTOOLIZE=${LIBTOOLIZE:-libtoolize}
+LIBTOOL=${LIBTOOL:-libtool}
+
 if [ -n "$GNOME2_PATH" ]; then
 	ACLOCAL_FLAGS="-I $GNOME2_PATH/share/aclocal $ACLOCAL_FLAGS"
 	PATH="$GNOME2_PATH/bin:$PATH"
 	export PATH
 fi
 
-(autoconf --version) < /dev/null > /dev/null 2>&1 || {
+(${AUTOCONF} --version) < /dev/null > /dev/null 2>&1 || {
   echo
-  echo "**Error**: You must have \`autoconf' installed to compile Gnome."
+  echo "**Error**: You must have \`autoconf' installed to compile GnuCash."
   echo "Download the appropriate package for your distribution,"
   echo "or get the source tarball at ftp://ftp.gnu.org/pub/gnu/"
   DIE=1
 }
 
-GETTEXTIZE_VERSION=`gettextize --version`
+GETTEXTIZE_VERSION=`${GETTEXTIZE} --version`
 gettextize_major_version=`echo ${GETTEXTIZE_VERSION} | \
 	sed 's/^.*GNU gettext.* \([0-9]*\)\.\([0-9]*\).\([0-9]*\).*$/\1/'`
 gettextize_minor_version=`echo ${GETTEXTIZE_VERSION} | \
@@ -30,10 +39,10 @@ else
 fi
 
 #(grep "^AM_PROG_LIBTOOL" $srcdir/configure.in >/dev/null) && {
-#  (libtool --version) < /dev/null > /dev/null 2>&1 || {
+#  (${LIBTOOL} --version) < /dev/null > /dev/null 2>&1 || {
 #    echo
-#    echo "**Error**: You must have \`libtool' installed to compile Gnome."
-#    echo "Get ftp://ftp.gnu.org/pub/gnu/libtool-1.2d.tar.gz"
+#    echo "**Error**: You must have \`libtool' installed to compile GnuCash."
+#    echo "Get ftp://ftp.gnu.org/pub/gnu/libtool-1.4.2.tar.gz"
 #    echo "(or a newer version if it is available)"
 #    DIE=1
 #  }
@@ -41,9 +50,9 @@ fi
 
 #grep "^AM_GNU_GETTEXT" $srcdir/configure.in >/dev/null && {
 #  grep "sed.*POTFILES" $srcdir/configure.in >/dev/null || \
-#  (gettext --version) < /dev/null > /dev/null 2>&1 || {
+#  (${GETTEXT} --version) < /dev/null > /dev/null 2>&1 || {
 #    echo
-#    echo "**Error**: You must have \`gettext' installed to compile Gnome."
+#    echo "**Error**: You must have \`gettext' installed to compile GnuCash."
 #    echo "Get ftp://alpha.gnu.org/gnu/gettext-0.10.35.tar.gz"
 #    echo "(or a newer version if it is available)"
 #    DIE=1
@@ -52,19 +61,19 @@ fi
 
 #grep "^AM_GNOME_GETTEXT" $srcdir/configure.in >/dev/null && {
 #  grep "sed.*POTFILES" $srcdir/configure.in >/dev/null || \
-#  (gettext --version) < /dev/null > /dev/null 2>&1 || {
+#  (${GETTEXT} --version) < /dev/null > /dev/null 2>&1 || {
 #    echo
-#    echo "**Error**: You must have \`gettext' installed to compile Gnome."
+#    echo "**Error**: You must have \`gettext' installed to compile GnuCash."
 #    echo "Get ftp://alpha.gnu.org/gnu/gettext-0.10.35.tar.gz"
 #    echo "(or a newer version if it is available)"
 #    DIE=1
 #  }
 #}
 
-(automake --version) < /dev/null > /dev/null 2>&1 || {
+(${AUTOMAKE} --version) < /dev/null > /dev/null 2>&1 || {
   echo
-  echo "**Error**: You must have \`automake' installed to compile Gnome."
-  echo "Get ftp://ftp.gnu.org/pub/gnu/automake-1.3.tar.gz"
+  echo "**Error**: You must have \`automake' installed to compile GnuCash."
+  echo "Get ftp://ftp.gnu.org/pub/gnu/automake-1.4.tar.gz"
   echo "(or a newer version if it is available)"
   DIE=1
   NO_AUTOMAKE=yes
@@ -72,11 +81,11 @@ fi
 
 
 # if no automake, don't bother testing for aclocal
-test -n "$NO_AUTOMAKE" || (aclocal --version) < /dev/null > /dev/null 2>&1 || {
+test -n "$NO_AUTOMAKE" || (${ACLOCAL} --version) < /dev/null > /dev/null 2>&1 || {
   echo
   echo "**Error**: Missing \`aclocal'.  The version of \`automake'"
   echo "installed doesn't appear recent enough."
-  echo "Get ftp://ftp.gnu.org/pub/gnu/automake-1.3.tar.gz"
+  echo "Get ftp://ftp.gnu.org/pub/gnu/automake-1.4.tar.gz"
   echo "(or a newer version if it is available)"
   DIE=1
 }
@@ -136,8 +145,8 @@ do
 	else
 	  echo "Creating $dr/aclocal.m4 ..."
 	  test -r $dr/aclocal.m4 || touch $dr/aclocal.m4
-	  echo "Running gettextize...  Ignore non-fatal messages."
-	  echo "no" | gettextize --force --copy $INTL
+	  echo "Running ${GETTEXTIZE}...  Ignore non-fatal messages."
+	  echo "no" | ${GETTEXTIZE} --force --copy $INTL
 	  echo "Making $dr/aclocal.m4 writable ..."
 	  test -r $dr/aclocal.m4 && chmod u+w $dr/aclocal.m4
         fi
@@ -145,23 +154,23 @@ do
       if grep "^AM_GNOME_GETTEXT" configure.in >/dev/null; then
 	echo "Creating $dr/aclocal.m4 ..."
 	test -r $dr/aclocal.m4 || touch $dr/aclocal.m4
-	echo "Running gettextize...  Ignore non-fatal messages."
-	echo "no" | gettextize --force --copy $INTL
+	echo "Running ${GETTEXTIZE}...  Ignore non-fatal messages."
+	echo "no" | ${GETTEXTIZE} --force --copy $INTL
 	echo "Making $dr/aclocal.m4 writable ..."
 	test -r $dr/aclocal.m4 && chmod u+w $dr/aclocal.m4
       fi
       if grep "^AC_PROG_INTLTOOL" configure.in >/dev/null; then
-        echo "Running intltoolize ..."
-        intltoolize --copy --force --automake
+        echo "Running ${INTLTOOLIZE} ..."
+        ${INTLTOOLIZE} --copy --force --automake
       fi 
 #      if grep "^AM_PROG_LIBTOOL" configure.in >/dev/null; then
 #	if test -z "$NO_LIBTOOLIZE" ; then 
-#	  echo "Running libtoolize..."
-#	  libtoolize --force --copy
+#	  echo "Running ${LIBTOOLIZE}..."
+#	  ${LIBTOOLIZE} --force --copy
 #	fi
 #      fi
-      echo "Running aclocal $aclocalinclude ..."
-      aclocal $aclocalinclude || {
+      echo "Running ${ACLOCAL} $aclocalinclude ..."
+      ${ACLOCAL} $aclocalinclude || {
 	echo
 	echo "**Error**: aclocal failed. This may mean that you have not"
 	echo "installed all of the packages you need, or you may need to"
@@ -172,14 +181,14 @@ do
       }
 
       if grep "^AM_CONFIG_HEADER" configure.in >/dev/null; then
-	echo "Running autoheader..."
-	autoheader || { echo "**Error**: autoheader failed."; exit 1; }
+	echo "Running ${AUTOHEADER}..."
+	${AUTOHEADER} || { echo "**Error**: autoheader failed."; exit 1; }
       fi
-      echo "Running automake --gnu $am_opt ..."
-      automake --add-missing --gnu $am_opt ||
+      echo "Running ${AUTOMAKE} --gnu $am_opt ..."
+      ${AUTOMAKE} --add-missing --gnu $am_opt ||
 	{ echo "**Error**: automake failed."; exit 1; }
-      echo "Running autoconf ..."
-      autoconf || { echo "**Error**: autoconf failed."; exit 1; }
+      echo "Running ${AUTOCONF} ..."
+      ${AUTOCONF} || { echo "**Error**: autoconf failed."; exit 1; }
     ) || exit 1
   fi
 done
